<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ForgotPassword">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/forgot_password"
        android:textStyle="bold"
        android:textColor="@color/orange"
        android:fontFamily="@font/dm_sans_bold"
        android:textSize="34sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/forgot_password_image"/>

    <!--Email Address-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:hint="@string/email_address"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColorHint="@color/orange"
        app:boxStrokeColor="@color/orange"
        app:boxStrokeWidthFocused="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0000"
            android:drawableStart="@drawable/email_icon"
            android:drawablePadding="8dp"
            android:paddingTop="25dp"
            android:paddingBottom="21dp"
            android:singleLine="true"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/resetPasswordButton"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/orange"
            android:text="@string/reset_password"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/backButton"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/orange"
            android:text="@string/back_to_login"
            android:textColor="@color/white"/>

    </LinearLayout>

</LinearLayout>