<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="@color/orange"
        android:fontFamily="@font/dm_sans_bold"
        android:textSize="50sp" />

    <!--Email Address-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:hint="@string/email_address"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColorHint="@color/orange"
        app:boxStrokeColor="@color/orange"
        app:boxStrokeWidthFocused="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0000"
            android:drawableStart="@drawable/email_icon"
            android:drawablePadding="8dp"
            android:paddingTop="25dp"
            android:paddingBottom="21dp"
            android:singleLine="true"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>


    <!--Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:hint="@string/password"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColorHint="@color/orange"
        app:boxStrokeColor="@color/orange"
        app:boxStrokeWidthFocused="1dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/orange"
        app:endIconDrawable="@drawable/password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="#0000"
            android:drawableStart="@drawable/password_icon"
            android:drawablePadding="8dp"
            android:paddingTop="25dp"
            android:paddingBottom="21dp"
            android:singleLine="true"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/orange"
            android:text="@string/login"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/forgotPassLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/forgot_password_small"
                android:fontFamily="@font/dm_sans"
                android:textColor="@color/orange"
                android:textStyle="bold"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/you_don_t_have_an_account_yet"
                android:fontFamily="@font/dm_sans"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/signupLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/sign_up"
                android:fontFamily="@font/dm_sans"
                android:textColor="@color/orange"
                android:textStyle="bold"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>